--- a/src/app/modules/sucursal-lista/sucursal-lista.component.html
+++ b/src/app/modules/sucursal-lista/sucursal-lista.component.html
@@ -134,6 +134,15 @@
                        </div>
                    </td>
                </ng-container>
+
+               <ng-container matColumnDef="documentacion">
+                <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Documentación</th>
+                <td mat-cell *matCellDef="let item">
+                    <!--<button mat-raised-button style="background-color: #fd9727; font-size: 14px; margin-right: 10px;" (click)="agregarHorario(item.idGimnasio)">+Agregar horario</button>-->
+                    <button mat-raised-button style="background-color: #0a0a0a; font-size: 14px; color: white;" (click)="agregarDocumentos(item.idGimnasio, item.nombreGym)">Agregar documentos</button>
+                </td>
+            </ng-container>
+
                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                <tr mat-row *matRowDef="let item; columns: displayedColumns; let i = index"></tr>
            </table>
