--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -1,5 +1,6 @@
+<div style="margin-top: 60px;">
 <div class="container mt-4">
-  <h2 class="mb-3">Lista de colaboradores</h2>
+  <h2 class="mb-3">LISTA DE COLABORADORES</h2>
   <div style="text-align: right; margin-bottom: 50px;">
     <button mat-raised-button (click)="OpenAgregar()" style="background-color: #fd9727; font-size: 16px;"><mat-icon>add</mat-icon>AGREGAR COLABORADOR</button>  <!--routerLink="../alta-colaborador"-->
     </div>
@@ -60,6 +61,7 @@
     ></mat-paginator>
 
   </div>
+</div> 
 </div>
 
 
