--- a/src/app/modules/configuracion/configuracion.component.html
+++ b/src/app/modules/configuracion/configuracion.component.html
@@ -1,7 +1,5 @@
+<div style="margin-top: 60px;">
 <div class="img-container">
-	<div class="full-width-image">
-	   <img src="../../../../../assets/img/Imagen3.png" alt="Imagen1">
-	</div>
  </div>
  <div class="container">
 	<div class="gym-details">
@@ -147,4 +145,5 @@
 		  </form>
 	   </ul>
 	</div>
+ </div>
  </div>
