--- a/src/app/modules/inventarios/inventarios.component.html
+++ b/src/app/modules/inventarios/inventarios.component.html
@@ -1,12 +1,13 @@
+<div style="margin-top: 60px;">
 <div class="container mt-4">
   <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
-    <h2 class="mb-3">Inventarios</h2>
+    <h2 class="mb-3">INVENTARIO</h2>
   
-    <div style="text-align: left; margin-bottom: 50px">
+    <div style="text-align: right; margin-bottom: 20px;">
        <button
           mat-raised-button
           (click)="abrirHistorial()"
-          style="background-color: #fd9727; font-size: 16px; margin-right: 100px">
+          style="background-color: #fd9727; font-size: 16px;">
           <mat-icon>assignment</mat-icon>Historial de inventario global
         </button> 
     </div>
@@ -72,4 +73,4 @@
     <br />
     <br />
   </div>
-  
+  </div>
