--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.css
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.css
@@ -18,11 +18,11 @@ table {
     font-weight: bold;
     margin-left: 5px;
     border-radius: 15px;
-    background-color: #F9A640;
+    background-color: #fd9727;
 }
 
 .button-icon{
-    background-color: #F9A640;
+    background-color: #fd9727;
     color: #000000;
     border: #ffffff;
 
