--- a/src/app/modules/membresias-lista/membresias.component.html
+++ b/src/app/modules/membresias-lista/membresias.component.html
@@ -1,4 +1,5 @@
-<div class="container mt-4">
+<div style="margin-top: 60px;">
+<div class="container mt-4" >
   <h2 class="mb-3">MEMBRESIAS DISPONIBLES</h2>
   <div style="text-align: right;">
      <button mat-raised-button style="background-color: #fd9727; font-size: 16px;" (click)="openDialog()">
@@ -59,4 +60,5 @@
      </table>
   </div>
   <mat-paginator [pageSizeOptions]="[4, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+</div>
 </div>
