--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -1,5 +1,6 @@
+<div style="margin-top: 60px;">
 <div class="container mt-4">
-  <h2 class="mb-3">Lista de productos</h2>
+  <h2 class="mb-3">LISTA DE PRODUCTOS</h2>
 
   <div style="text-align: right; margin-bottom: 50px">
     <button
@@ -74,4 +75,5 @@
   <br />
   <br />
   <br />
+</div>
 </div>
