--- a/src/app/modules/servicios-lista/servicios-lista.component.html
+++ b/src/app/modules/servicios-lista/servicios-lista.component.html
@@ -1,3 +1,4 @@
+<div style="margin-top: 60px;">
 <div class="container mt-4">
   <h2 class="mb-3">SERVICIOS DISPONIBLES</h2>
   <div style="text-align: right;">
@@ -45,4 +46,5 @@
      </table>
   </div>
   <mat-paginator [pageSizeOptions]="[4, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+</div>
 </div>
