--- a/src/app/modules/ver-configuracion/ver-configuracion.component.html
+++ b/src/app/modules/ver-configuracion/ver-configuracion.component.html
@@ -1,8 +1,7 @@
+<div style="margin-top: 60px;">
 <div class="img-container">
     <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
-    <div class="full-width-image">
-        <img src="../../../../../assets/img/Imagen3.png" alt="Imagen1">
-     </div>
+
 </div>    
  <div class="container">
     <div class="gym-details">
@@ -80,3 +79,4 @@
       </ng-template>
   </div>
  </div>
+</div>
