--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -1,25 +1,68 @@
-/**propiedades body **/
-.body {
-    margin: 0;
-    position: relative;
-    padding-bottom: 139px;
-    min-height: 100vh;
-}
-
-.container {
-    margin-bottom: 30px;
-}
-
-.btn-gym {
-    background: #FD9727; 
-    color: white;
-    text-decoration: none;
-}
-
-.txt_msg{
-    color: #FD9727;
-}
-
-.custom-border {
-    border: 2px solid #FD9727; 
+/* dashboard.component.css */
+.dashboard-cards {
+    display: flex;
+    flex-direction: row;
+   
   }
+
+
+  .dashboard-cardss {
+    display: flex;
+  flex-wrap: wrap;
+  }
+  
+  .orange-card {
+    background-color: #fd9727; /* Naranja */
+  }
+  
+  .navy-card {
+    background-color: #001F3F; /* Azul Marino */
+  }
+  
+  .white-card {
+    background-color: #FFFFFF; /* Blanco */
+  }
+  
+  mat-card {
+    width: 100%;
+    margin-bottom: 16px;
+    margin-right: 16px;
+  }
+  
+  .card-image {
+    width: 50%; /* Ajusta el ancho de la imagen según sea necesario */
+    height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
+  }
+
+  .card-imagenesD {
+    width: 30%; /* Ajusta el ancho de la imagen según sea necesario */
+    height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
+  }
+
+  .card-imagenesU {
+    width: 20%; /* Ajusta el ancho de la imagen según sea necesario */
+    height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
+  }
+
+  .card-imagenesT {
+    width: 15%; /* Ajusta el ancho de la imagen según sea necesario */
+    height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
+  }
+
+  /* dashboard.component.css (o tu archivo de estilos) */
+
+.dashboard-cardss mat-card:hover {
+    background-color: #e0e0e0; /* Cambia esto al color que prefieras */
+  }
+  
+
+
+  .half-width-card {
+    flex: 1 0 50%;
+    margin-right: 10px; /* Espacio entre las tarjetas */
+  }
+  
+  .quarter-width-card {
+    flex: 1 0 25%;
+    margin-right: 10px; /* Espacio entre las tarjetas */
+  }  
