--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -1,7 +1,6 @@
-<br>
-<h1 style="margin-left: 66px;">Pago de membresia en efectivo</h1>
-<br>
-<div class="grid-menu" style=" justify-content: center;">
+<div style="margin-top: 60px;">
+  <div class="container mt-4">
+  <h2>PAGO DE MEMBRESIA EN EFECTIVO</h2>
     <!--<mat-tab-group>-->
         <!-- APARTADO 1, LISTADO TOTAL DE CLIENTES CON UNA MEMBRESIA ACTIVA -->
         <!--<mat-tab label="Clientes activos"> -->
@@ -10,7 +9,7 @@
 
             <div class="grid-input-date" >
               <div style="display: flex; justify-content: flex-end;">
-                  <mat-form-field>
+                  <mat-form-field appearance="outline">
                       <mat-label>Fecha Inicio</mat-label>
                       <input matInput [matDatepicker]="pickerInicio" (ngModelChange)="onFechaInicioChange($event)" [(ngModel)]="fechaInicio" readonly>  
                       <mat-hint>MM/DD/YYYY</mat-hint>
@@ -22,7 +21,7 @@
               <div></div>
       
               <div style="display: flex; justify-content: flex-start;">
-                  <mat-form-field>
+                  <mat-form-field appearance="outline">
                       <mat-label>Fecha Fin</mat-label>
                       <input matInput [matDatepicker]="pickerFin" (ngModelChange)="onFechaFinChange($event)" [(ngModel)]="fechaFin" readonly>
                       <mat-hint>MM/DD/YYYY</mat-hint>
@@ -311,4 +310,5 @@
           </form>
         </mat-tab>
     </mat-tab-group>-->
+</div>
 </div>
