--- a/src/app/modules/plan-lista/membresias.component.html
+++ b/src/app/modules/plan-lista/membresias.component.html
@@ -1,3 +1,4 @@
+<div style="margin-top: 60px;">
 <div class="container mt-4">
   <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true">
      <p style="color: white" > Cargando... </p>
@@ -75,4 +76,5 @@
   </div>
   <mat-paginator [pageSizeOptions]="[4, 10, 25, 100]" showFirstLastButtons></mat-paginator>
   <br/><br/>
+</div>
 </div>
