--- a/src/app/modules/ver-corte/ver-corte.component.html
+++ b/src/app/modules/ver-corte/ver-corte.component.html
@@ -1,5 +1,6 @@
+<div style="margin-top: 60px;">
 <div class="container mt-4">
-   <h1>VENTAS</h1>
+   <h2>VENTAS</h2>
    <label style="font-size: medium;">Reporte que muestra las ventas del gimnasio por fechas</label> <br><br>
    <button (click)="ventas()"  class="boton-transparente"><img src="https://cdn-icons-png.flaticon.com/512/6822/6822288.png" style="width: 20%; margin-right: 10px;">Nueva venta</button>
    <div >
@@ -75,4 +76,5 @@
       <mat-paginator #paginatorHistorial [pageSizeOptions]="[5, 10, 25]" showFirstLastButtons></mat-paginator>
       <br><br><br>
    </div>
+</div>
 </div>
